--- a/tasti-labs/style.css
+++ b/tasti-labs/style.css
@@ -42,25 +42,26 @@ h1 {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
 .card {
   padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+ul {
+  display: flex;  
+  flex-wrap: wrap;
+  gap: 1em;
+}
+
+#categories li {
+  list-style-type: none;
+  text-align: center;
+  list-style-position: inside;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 button {
