--- a/tasti-labs/style.css
+++ b/tasti-labs/style.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  padding:0;
+  margin:0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -25,7 +30,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+ flex-direction:column;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -49,7 +56,13 @@ h1 {
 ul {
   display: flex;  
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   gap: 1em;
+}
+
+#categories {
+  padding-top: 2em;
 }
 
 #categories li {
@@ -60,6 +73,10 @@ ul {
   margin-right: auto;
 }
 
+#dish-list {
+  padding-left: 2em;
+  padding-right: 2em;
+}
 #dish-list li {
   list-style-type: none;
   text-align: center;
