--- a/tasti-labs/style.css
+++ b/tasti-labs/style.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: monospace;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(19, 18, 18, 0.87);
+  background-color: #FFEDDC;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,8 +17,9 @@
 }
 
 * {
-  padding:0;
-  margin:0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -50,16 +54,24 @@ h1 {
   text-align: center;
 }
 
-.read-the-docs {
-  color: #888;
-}
-
 ul {
   display: flex;  
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 1em;
+}
+
+nav {
+  margin-bottom: 2em;
+}
+
+#nav-butt>li {
+  list-style-type: none;
+  text-align: center;
+  list-style-position: inside;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 
 #categories {
@@ -131,18 +143,27 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: black;
+  text-decoration: none;
 }
 button:hover {
-  border-color: #646cff;
+  /* border-color: #646cff; */
+  text-decoration:underline;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-button#recipe{
+button#categories {
+  border: none;
+}
+button#categories:hover {
+  border: #213547;
+}
+button#recipe {
   border: none;
   padding: 12px 24px;
   border-radius: 50px;
@@ -161,6 +182,7 @@ button#recipe{
 button#recipe:hover {
   transform: scale(1.2);
 }
+
 
 @media (prefers-color-scheme: light) {
   :root {
