Changed styling, added favicon and logo

--- a/tasti-labs/style.css
+++ b/tasti-labs/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: monospace;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,6 +14,7 @@
 }
 
 * {
+  box-sizing: border-box;
   padding:0;
   margin:0;
 }
@@ -25,6 +26,17 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+nav>ul>li {
+  list-style-type: none;
+}
+
+nav>ul>li>button {
+  color: black;
+}
+nav>ul>li>button:hover {
+  text-decoration:underline;
 }
 
 body {
@@ -108,10 +120,10 @@ img {
 
 .card {
   /* Change background color */
-  background-color: rgb(101, 92, 92);
+  background-color: white;
 
   /* Add border */
-  border: 1px solid #537b91;
+  border: 1px solid black;
 
   /* Add space between the border and the content */
   padding: 8px;
@@ -135,15 +147,18 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+ul#categories>li>button {
+  transition: all .2s ease-in-out; 
+}
+ul#categories>li>button:hover {
+  transform: scale(1.1); 
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 button#recipe{
-  border: none;
+  border: 1px solid rgb(74, 74, 177);
   padding: 12px 24px;
   border-radius: 50px;
 
