--- a/tasti-labs/style.css
+++ b/tasti-labs/style.css
@@ -184,14 +184,27 @@ button#recipe:hover {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #ffe0b7;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: transparent;
   }
+
+  /* ul#recipe-details {
+   
+  } */
+
+  h1#recipe-details {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+
+
+
+
 
 
 }
